--- a/resume/style.css
+++ b/resume/style.css
@@ -8,12 +8,22 @@ BODY {
   font-weight: 400;
 }
 
+#container {
+  width: 100%;
+  max-width: 1200px;
+  margin:0 auto;
+}
+
+
 /*Banner name at top*/
-h1 {
+#name {
   font-size: 3em;
   text-transform: uppercase;
   text-align: center;
-  color: #33485e;
+  border-bottom: 1px solid #33485e;
+  width: 60%;
+  min-width: 300px;
+  margin:0 auto;
 }
 
 /*title, student*/
@@ -24,34 +34,78 @@ strong {
 }
 
 /*section titles, experience, education, skills*/
-h2 {
+.sectionheader {
   font-size: 1.5em;
   text-transform: uppercase;
   background-color: #33485e;
   color: #fff;
   font-weight: 400;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  width: 70%;
+  min-width: 300px;
 }
 
 /*job titles*/
-h3 {
+.jobtitle {
   font-weight: 600;
   font-size: 1.5em;
 }
 
 /*job organization*/
-h4 {
+.organization {
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 /*Job dates*/
-h5 {
+.date {
   font-weight: 400;
   font-size: 1em;
   font-style: italic;
+  margin-top: 2px;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/*paragraphs*/
+.description {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /*contact info, skills, education*/
+
+.menu{ /*FIX*/
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  display: inline;
+}
+
+/*education*/
+
+#degrees{
+  margin-top: 5px;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/*skills*/
+
+#id{
+  margin-top: 5px;
+  margin-bottom: 0;
+  margin-left: 0px;
+  margin-right: 0;
+}
+
 ul {
   font-size: 1em;
 }
