--- a/final-project/stylesheet.css
+++ b/final-project/stylesheet.css
@@ -102,7 +102,7 @@ a:hover{
 
 /*Pull quote*/
 .quote{
-  color:#0089fc;
+  color:#fc2119;
   font-size: 2em;
   text-align: left;
   padding: 15px 0 15px 0;
